--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>User Profile Form <span>with aweeesome madlibs action </span></h1>	
+			<h1>User Profile Form <span>with aweesome madlibs action </span></h1>	
 		</header>
 		<div class="wrapper">
 					<div class="element">
