ALl new form page

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
 	  		</div>		
 
 			<div class="rightcontent">
+				<div class="datasubmit"></div>
 			I feel like <span id="firstNameOutput"></span> is making a <span id="lastNameOutput"></span>profile for class assignment, so can you <span id="emailOutput"></span>drink <span id="coffeeOutput"></span>
 			</div>
 
 		</div><!-- /wrapper -->
-		<script src="test.js"></script>
+		<script src="test2.js"></script>
 	</body>
 	</html>
